--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.2",
+    "bcrypt": "^5.1.0",
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonschema": "^1.4.1",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.9.0"
   }
 }
