--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.9.0"
+  },
+  "devDependencies": {
+    "supertest": "^6.3.3"
   }
 }
