--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
+    "build": "nodemon server.js",
     "dev": "nodemon server.js",
     "test": "jest -i"
   },
