--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "build": "nodemon server.js",
+    "start": "node server.js",
+    "build": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest -i"
   },
